# tiltrotor_offboard_mission

./: CMakeLists.txt  README.md  package.xml
include/tiltrotor_offboard_mission/: px4_offboard_interface.hpp
src/: offboard_mission_node.cpp
